# SunFinder

./: .gitignore  CMakeLists.txt  README.md  gdb  main.cpp
Incpp/: servo.hpp
Srcpp/: CMakeLists.txt  servo.cpp
